update infos and links

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     Install it from our <a href="http://update.sugarj.org/"> Eclipse update site</a>, including IDE support and layout-sensitive parsing.</li>
 <li>What does language composition really mean?
 Paper at LDTA 2012
-[ <a href="http://www.informatik.uni-marburg.de/%7Eseba/publications.html#ErdwegGR12">abstract</a>
-| <a href="http://www.informatik.uni-marburg.de/%7Eseba/publications/languagecomposition.pdf">.pdf</a> ]</li>
+[ <a href="http://erdweg.org/publications.html#ErdwegGR12">abstract</a>
+| <a href="http://erdweg.org/publications/languagecomposition.pdf">.pdf</a> ]</li>
 </ul>
 
 
@@ -85,6 +85,10 @@ host languages: Java (*.sugj), Haskell (*.shs), Prolog (*.sugp).
 We are currently developing a number of extensions of SugarJ. The relevant code can be found as follows:
 
 <ul>
+<li>Language extensibility for System Fomega (by <a href="http://www.user.tu-berlin.de/florenz/">Florian Lorenzen</a>):
+  in branch <a href="http://github.com/florenzen/sugarj/tree/fomega">fomega</a></li>
+<li>Language extensibility for JavaScript (by Bob Davison):
+  in repository <a href="http://github.com/bobd91/sugarjs/">sugarjs</a></li>
 <li>SugarHaskell: integrated into <a href="http://github.com/seba--/sugarj/tree/master">master branch</a> with case studies
     located in <a href="http://github.com/seba--/sugarj/tree/master/case-studies/haskell">/case-studies/haskell</a>, file extension is ".shs"</li>
 <li>Layout-sensitive parsing: in repository <a href="http://github.com/seba--/layout-parsing/">layout-parsing</a></li>
@@ -101,13 +105,14 @@ We are currently developing a number of extensions of SugarJ. The relevant code 
 </p>
 
 <ul>
-<li><a href="http://www.informatik.uni-marburg.de/%7Eseba/">Sebastian Erdweg</a>, project leader, University of Marburg</li>
+<li><a href="http://erdweg.org">Sebastian Erdweg</a>, project leader, TU Darmstadt</li>
 <li><a href="http://www.informatik.uni-marburg.de/%7Erendel/">Tillmann Rendel</a>, University of Marburg</li>
 <li><a href="http://www.uni-marburg.de/fb12/ps/team/kaestner">Christian Kästner</a>, University of Marburg</li>
 <li><a href="http://www.informatik.uni-marburg.de/%7Ekos/">Klaus Ostermann</a>, University of Marburg</li>
 <li><a href="http://www.lclnet.nl/">Lennart Kats</a>, Delft University of Technology</li>
 <li><a href="http://eelcovisser.org/">Eelco Visser</a>, Delft University of Technology</li>
 <li><a href="http://www.informatik.uni-marburg.de/~pgiarrusso/">Paolo G. Giarrusso</a>, University of Marburg</li>
+<li><a href="http://www.user.tu-berlin.de/florenz/">Florian Lorenzen</a>, TU Berlin</li>
 <li>Jonas Pusch, University of Marburg</li>
 <li>Stefan Fehrenbach, University of Marburg</li>
 <li>Felix Rieger, University of Marburg</li>
@@ -116,20 +121,20 @@ We are currently developing a number of extensions of SugarJ. The relevant code 
 <p>Sebastian Erdweg, Felix Rieger, Tillmann Rendel, and Klaus Ostermann.
 <strong>Layout-sensitive Language Extensibility with SugarHaskell</strong>.
 In <em>Proceedings of Haskell Symposium</em>, 2012. to appear.
-[ <a href="http://www.informatik.uni-marburg.de/%7Eseba/publications.html#ErdwegRRO12">abstract</a>
-| <a href="http://www.informatik.uni-marburg.de/~seba/publications/sugarhaskell.pdf">.pdf</a> ]
+[ <a href="http://erdweg.org/publications.html#ErdwegRRO12">abstract</a>
+| <a href="http://erdweg.org/publications/sugarhaskell.pdf">.pdf</a> ]
 
 <p>Sebastian Erdweg, Paolo G. Giarrusso, and Tillmann Rendel. <strong>Language Composition Untangled</strong>. In <em>Proceedings of Workshop on Language Descriptions, Tools and Applications (LDTA)</em>, 2012. to appear.
-  [ <a href="http://www.informatik.uni-marburg.de/%7Eseba/publications.html#ErdwegGR12">abstract</a>
-  | <a href="http://www.informatik.uni-marburg.de/%7Eseba/publications/languagecomposition.pdf">.pdf</a> ]</p>
+  [ <a href="http://erdweg.org/publications.html#ErdwegGR12">abstract</a>
+  | <a href="http://erdweg.org/publications/languagecomposition.pdf">.pdf</a> ]</p>
 
 <p>Sebastian Erdweg and Lennart C. L. Kats and Tillmann Rendel and Christian Kästner and Klaus Ostermann and Eelco Visser. <strong>Growing a Language Environment with Editor Libraries</strong>. In <em>Proceedings of Conference on Generative Programming and Component Engineering (GPCE)</em>, pages 167–176. ACM, 2011.
-  [ <a href="http://www.informatik.uni-marburg.de/%7Eseba/publications.html#ErdwegKRKOV11">abstract</a>
-  | <a href="http://www.informatik.uni-marburg.de/%7Eseba/publications/editorlibs.pdf">.pdf</a> ]</p>
+  [ <a href="http://erdweg.org/publications.html#ErdwegKRKOV11">abstract</a>
+  | <a href="http://erdweg.org/publications/editorlibs.pdf">.pdf</a> ]</p>
 
 <p>Sebastian Erdweg, Tillmann Rendel, Christian Kästner and Klaus Ostermann. <strong>SugarJ: Library-based Syntactic Language Extensibility</strong>. In <em>Proceedings of Conference on Object-Oriented Programming, Systems, Languages, and Applications (OOPSLA)</em>, pages 391–406. ACM, 2011. <strong>Distinguished Paper Award</strong>.
-  [ <a href="http://www.informatik.uni-marburg.de/%7Eseba/publications.html#ErdwegRKO11">abstract</a>
-  | <a href="http://www.informatik.uni-marburg.de/%7Eseba/publications/sugarj.pdf">.pdf</a> ]</p>
+  [ <a href="http://erdweg.org/publications.html#ErdwegRKO11">abstract</a>
+  | <a href="http://erdweg.org/publications/sugarj.pdf">.pdf</a> ]</p>
       </section>
     </div>
 
