point to annotated let

--- a/fomega/index.html
+++ b/fomega/index.html
@@ -77,7 +77,7 @@
   <a href="https://github.com/seba--/sugarj/blob/fomega/case-studies/fomega-type-annotations/src/contextanalysis/KindingRelation.sf">KindingRelation.sf</a>,
   <a href="https://github.com/seba--/sugarj/tree/fomega/case-studies/fomega-type-annotations/src/contextanalysis">all else</a>
 </li>
-<li>Let extension: <a href="https://github.com/seba--/sugarj/blob/fomega/case-studies/fomega-type-annotations/src/extensions/Let.sf">Let.sf</a>
+<li>Let extension: <a href="https://github.com/seba--/sugarj/blob/fomega/case-studies/fomega-type-annotations/src/extensions/AnnotatedLet.sf">AnnotatedLet.sf</a>
 </li>
 <li>Do block extension: <a href="https://github.com/seba--/sugarj/blob/fomega/case-studies/fomega-type-annotations/src/extensions/DoBlock2.sf">DoBlock2.sf</a>
 </li>
