--- a/index.html
+++ b/index.html
@@ -118,21 +118,43 @@ We are currently developing a number of extensions of SugarJ. The relevant code 
 <li>Felix Rieger, University of Marburg</li>
 </ul><h2>Publications</h2>
 
-<p>Sebastian Erdweg, Felix Rieger, Tillmann Rendel, and Klaus Ostermann.
-<strong>Layout-sensitive Language Extensibility with SugarHaskell</strong>.
+
+<p>
+<strong>Extensible Languages for Flexible and Principled Domain Abstraction</strong><br>
+Sebastian Erdweg. PhD thesis, Philipps-Universit&auml;t Marburg, 2013.
+[ <a href="http://erdweg.org/publications.html#Erdweg13thesis">abstract</a>
+| <a href="http://erdweg.org/publications/dissertation.pdf">.pdf</a> ]
+
+<p>
+<strong>Embedding a Questionnaire DSL with SugarJ</strong><br>
+Sebastian Erdweg.
+In <em>Proceedings of Language Workbench Challenge (LWC)</em>, 2013. 
+[ <a href="http://erdweg.org/publications.html#Erdweg13a">abstract</a>
+| <a href="http://erdweg.org/publications/lwc13-questionnaire.pdf"> pdf </a> ]
+
+<p>
+<strong>Layout-sensitive Language Extensibility with SugarHaskell</strong><br>
+Sebastian Erdweg, Felix Rieger, Tillmann Rendel, and Klaus Ostermann.
 In <em>Proceedings of Haskell Symposium</em>, 2012. to appear.
 [ <a href="http://erdweg.org/publications.html#ErdwegRRO12">abstract</a>
 | <a href="http://erdweg.org/publications/sugarhaskell.pdf">.pdf</a> ]
 
-<p>Sebastian Erdweg, Paolo G. Giarrusso, and Tillmann Rendel. <strong>Language Composition Untangled</strong>. In <em>Proceedings of Workshop on Language Descriptions, Tools and Applications (LDTA)</em>, 2012. to appear.
+<p>
+<strong>Language Composition Untangled</strong><br>
+Sebastian Erdweg, Paolo G. Giarrusso, and Tillmann Rendel.
+In <em>Proceedings of Workshop on Language Descriptions, Tools and Applications (LDTA)</em>, 2012. to appear.
   [ <a href="http://erdweg.org/publications.html#ErdwegGR12">abstract</a>
   | <a href="http://erdweg.org/publications/languagecomposition.pdf">.pdf</a> ]</p>
 
-<p>Sebastian Erdweg and Lennart C. L. Kats and Tillmann Rendel and Christian Kästner and Klaus Ostermann and Eelco Visser. <strong>Growing a Language Environment with Editor Libraries</strong>. In <em>Proceedings of Conference on Generative Programming and Component Engineering (GPCE)</em>, pages 167–176. ACM, 2011.
+<p><strong>Growing a Language Environment with Editor Libraries</strong><br>
+Sebastian Erdweg and Lennart C. L. Kats and Tillmann Rendel and Christian Kästner and Klaus Ostermann and Eelco Visser.
+In <em>Proceedings of Conference on Generative Programming and Component Engineering (GPCE)</em>, pages 167–176. ACM, 2011.
   [ <a href="http://erdweg.org/publications.html#ErdwegKRKOV11">abstract</a>
   | <a href="http://erdweg.org/publications/editorlibs.pdf">.pdf</a> ]</p>
 
-<p>Sebastian Erdweg, Tillmann Rendel, Christian Kästner and Klaus Ostermann. <strong>SugarJ: Library-based Syntactic Language Extensibility</strong>. In <em>Proceedings of Conference on Object-Oriented Programming, Systems, Languages, and Applications (OOPSLA)</em>, pages 391–406. ACM, 2011. <strong>Distinguished Paper Award</strong>.
+<p><strong>SugarJ: Library-based Syntactic Language Extensibility</strong><br>
+Sebastian Erdweg, Tillmann Rendel, Christian Kästner and Klaus Ostermann.
+In <em>Proceedings of Conference on Object-Oriented Programming, Systems, Languages, and Applications (OOPSLA)</em>, pages 391–406. ACM, 2011. <strong>Distinguished Paper Award</strong>.
   [ <a href="http://erdweg.org/publications.html#ErdwegRKO11">abstract</a>
   | <a href="http://erdweg.org/publications/sugarj.pdf">.pdf</a> ]</p>
       </section>
