--- a/first-steps.html
+++ b/first-steps.html
@@ -76,7 +76,7 @@ project. For the meantime, please follow these three steps:
 <h3>Installation</h3>
 
 <ol>
-<li>Install Eclipse (follow instructions on <a href="eclipse.org">eclipse.org</a>).</li>
+<li>Install Eclipse (follow instructions on <a href="http://eclipse.org">eclipse.org</a>).</li>
 <li>Start Eclipse.</li>
 <li>In Eclipse, select 'Install New Software' in the 'Help' menu.</li>
 <li>In the 'work with' field, copy the SugarJ update site <a
